--- a/index.html
+++ b/index.html
@@ -1890,7 +1890,6 @@
         </div>
         <div class="mobile-contact">
             <a href="tel:+38269206050" style="color: white; text-decoration: none;">
-                <i class="fas fa-phone-alt"></i> +382 69 206 050
             </a>
         </div>
         <div class="mobile-copyright">
@@ -1959,8 +1958,8 @@
             const sliderWrapper = document.querySelector('.slider-wrapper');
             const slides = document.querySelectorAll('.slide');
             const dots = document.querySelectorAll('.dot');
-            const prevBtn = document.querySelector('.prev-btn');
-            const nextBtn = document.querySelector('.next-btn');
+            const prevBtn = document.querySelector('.next-btn');
+            const nextBtn = document.querySelector('.prev-btn');
             
             if (sliderWrapper && slides.length > 0) {
                 let currentIndex = 0;
