--- a/index.html
+++ b/index.html
@@ -1381,9 +1381,10 @@ font-size: 14px !important;
         </button>
     </div>
     <a href="#" class="sve-kategorije"><i class="fas fa-th-large"></i> SVE KATEGORIJE</a>
-    <a href="/"><i class="fas fa-tag"></i>POČETNA</a>
+    <!-- Mobile subcategories will be added by JavaScript -->
+    <a href="index.html"><i class="fas fa-home"></i> POČETNA</a>
     <a href="#"><i class="fas fa-store"></i> PRODAVNICE</a>
-    <a href="/kontakt"><i class="fas fa-envelope"></i> KONTAKT</a>
+    <a href="kontakt.html"><i class="fas fa-envelope"></i> KONTAKT</a>
     <a href="#"><i class="fas fa-headset"></i> PODRŠKA</a>
     <a href="#"><i class="fas fa-newspaper"></i> NOVOSTI</a>
 </div>
@@ -1393,10 +1394,10 @@ font-size: 14px !important;
     <!-- Glavna navigacija za desktop -->
     <div class="nav-menu">
         <div class="nav-container">
-            <a href="#" class="sve-kategorije" id="sveKategorijeDesktop">SVE KATEGORIJE</a>
+            <a href="index.html" class="sve-kategorije" id="sveKategorijeDesktop">SVE KATEGORIJE</a>
             <a href="/">POČETNA</a>
             <a href="#">PRODAVNICE</a>
-            <a href="/kontakt">KONTAKT</a>
+            <a href="kontakt.html">KONTAKT</a>
             <a href="#">PODRŠKA</a>
             <a href="#">NOVOSTI</a>
         </div>
