--- a/kontakt.html
+++ b/kontakt.html
@@ -1175,9 +1175,9 @@ body {
         </div>
         <a href="#" class="sve-kategorije"><i class="fas fa-th-large"></i> SVE KATEGORIJE</a>
         <!-- Mobile subcategories will be added by JavaScript -->
-        <a href="/"><i class="fas fa-home"></i> POČETNA</a>
+        <a href="index.html"><i class="fas fa-home"></i> POČETNA</a>
         <a href="#"><i class="fas fa-store"></i> PRODAVNICE</a>
-        <a href="/kontakt"><i class="fas fa-envelope"></i> KONTAKT</a>
+        <a href="kontakt.html"><i class="fas fa-envelope"></i> KONTAKT</a>
         <a href="#"><i class="fas fa-headset"></i> PODRŠKA</a>
         <a href="#"><i class="fas fa-newspaper"></i> NOVOSTI</a>
     </div>
@@ -1187,9 +1187,9 @@ body {
     <div class="nav-menu">
         <div class="nav-container">
             <a href="#" class="sve-kategorije" id="sveKategorijeDesktop">SVE KATEGORIJE</a>
-            <a href="/">POČETNA</a>
+            <a href="index.html">POČETNA</a>
             <a href="#">PRODAVNICE</a>
-            <a href="/kontakt">KONTAKT</a>
+            <a href="kontakt.html">KONTAKT</a>
             <a href="#">PODRŠKA</a>
             <a href="#">NOVOSTI</a>
         </div>
