--- a/kontakt.html
+++ b/kontakt.html
@@ -20,7 +20,7 @@ body {
 
 /* Top navbar - smaller and black */
 .top-navbar {
-    background-color: #000;
+    background-color: #124e9a;
     color: #fff;
     padding: 5px 0;
     width: 100%;
@@ -59,7 +59,7 @@ body {
 
 /* Main header */
 .main-header {
-    background-color: #000;
+    background-color: #124e9a;
     padding: 15px 0;
     width: 100%;
 }
