--- a/kontakt.html
+++ b/kontakt.html
@@ -301,9 +301,9 @@ body {
 }
 
 .nav-menu .sve-kategorije {
-    background-color: #000000;
+    background-color: #124e9a;
     color: #ffffff;
-    border: 1px solid #000;
+    border: 1px solid #124e9a;
 }
 
 /* Active stanje za SVE KATEGORIJE kada je dropdown otvoren */
