--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@ body {
 }
 
 .top-navbar a:hover {
-    color: #00a0e9;
+    color: #fff;
 }
 
 .top-navbar i {
-    color: #00a0e9;
+    color: #fff;
     margin-right: 5px;
 }
 
@@ -224,11 +224,11 @@ body {
     margin-right: 15px;
     min-width: 20px;
     text-align: center;
-    color: #00a0e9;
+    color: #fff;
 }
 
 .mobile-nav a.sve-kategorije {
-    background-color: #00a0e9;
+    background-color: #111;
 }
 
 .mobile-nav a.sve-kategorije i {
@@ -362,7 +362,7 @@ body {
 }
 
 .category-list a:hover, .subcategory-list a:hover {
-    color: #00a0e9;
+    color: #fff;
 }
 
 /* Mobile podmeni za SVE KATEGORIJE */
@@ -537,7 +537,7 @@ body {
     transform: translateX(-50%);
     width: 60px;
     height: 3px;
-    background-color: #00a0e9;
+    background-color: #124e9a;
 }
 
 .categories-container {
@@ -802,7 +802,7 @@ body {
 
 /* Footer */
 .footer {
-    background-color: #000;
+    background-color: #124e9a#fff;
     color: #fff;
     padding: 40px 0 20px;
     margin-top: 50px;
@@ -837,7 +837,7 @@ body {
     bottom: 0;
     width: 30px;
     height: 2px;
-    background-color: #00a0e9;
+    background-color: #fff;
 }
 
 .footer-links {
@@ -856,7 +856,7 @@ body {
 }
 
 .footer-links a:hover {
-    color: #00a0e9;
+    color: #fff;
 }
 
 .footer-contact {
@@ -873,7 +873,7 @@ body {
 }
 
 .contact-item i {
-    color: #00a0e9;
+    color: #fff;
     min-width: 20px; /* Fiksna širina za ikone */
     text-align: center;
 }
@@ -896,7 +896,7 @@ body {
 }
 
 .social-icon:hover {
-    background-color: #00a0e9;
+    background-color: #fff;
 }
 
 .social-icon i {
@@ -934,7 +934,7 @@ body {
 /* Prilagođeni footer za mobilne uređaje */
 .mobile-footer {
     display: none;
-    background-color: #000;
+    background-color: #124e9a;
     padding: 20px 0;
     text-align: center;
 }
@@ -1341,10 +1341,10 @@ font-size: 14px !important;
         </div>
         <div class="desktop">
         <div class="user-actions" class="desktop">
-            <a href="#" class="prijava">
+            <a href="prijava.html" class="prijava">
                 <i class="fas fa-user fa-lg" class="desktop"></i> PRIJAVA
             </a>
-            <a href="#" class="cart">
+            <a href="korpa.html" class="cart">
                 <i class="fas fa-shopping-cart fa-lg" class="desktop"></i>
             </a>
         </div></div>
@@ -1362,10 +1362,10 @@ font-size: 14px !important;
             </a>
             
             <div class="user-actions">
-                <a href="#" class="prijava">
+                <a href="prijava.html" class="prijava">
                     <i class="fas fa-user fa-lg"></i>
                 </a>
-                <a href="#" class="cart">
+                <a href="korpa.html" class="cart">
                     <i class="fas fa-shopping-cart fa-lg"></i>
                 </a>
             </div>
