--- a/index.html
+++ b/index.html
@@ -1394,8 +1394,8 @@ font-size: 14px !important;
     <!-- Glavna navigacija za desktop -->
     <div class="nav-menu">
         <div class="nav-container">
-            <a href="index.html" class="sve-kategorije" id="sveKategorijeDesktop">SVE KATEGORIJE</a>
-            <a href="/">POČETNA</a>
+            <a href="#" class="sve-kategorije" id="sveKategorijeDesktop">SVE KATEGORIJE</a>
+            <a href="index.html">POČETNA</a>
             <a href="#">PRODAVNICE</a>
             <a href="kontakt.html">KONTAKT</a>
             <a href="#">PODRŠKA</a>
