--- a/kontakt.html
+++ b/kontakt.html
@@ -398,7 +398,7 @@ body {
 
 /* Footer */
 .footer {
-    background-color: #124e9a#fff;
+    background-color: #124e9a;
     color: #fff;
     padding: 40px 0 20px;
     margin-top: 50px;
@@ -623,7 +623,7 @@ body {
     bottom: 0;
     width: 30px;
     height: 2px;
-    background-color: #fff;
+    background-color: #333;
 }
 
 .contact-info-list {
@@ -638,7 +638,7 @@ body {
 }
 
 .contact-info-item i {
-    color: #fff;
+    color: #333;
     font-size: 18px;
     min-width: 20px;
     text-align: center;
@@ -661,7 +661,7 @@ body {
 }
 
 .contact-info-item a {
-    color: #fff;
+    color: #666;
     text-decoration: none;
     transition: color 0.3s;
 }
@@ -776,7 +776,7 @@ body {
 }
 
 .submit-btn:hover {
-    background-color: #4470a8;
+    background-color: #6d98d1;
 }
 .telefon{
     display: none;
@@ -824,14 +824,6 @@ body {
     min-width: 20px;
     text-align: center;
     color: #fff;
-}
-
-.mobile-nav a.sve-kategorije {
-    background-color: #fff;
-}
-
-.mobile-nav a.sve-kategorije i {
-    color: white;
 }
 
 .close-menu {
@@ -1194,6 +1186,8 @@ body {
             <a href="#">NOVOSTI</a>
         </div>
     </div>
+
+    </div>
     <div class="contact-page-container">
         <h1 class="contact-page-title">Kontaktirajte nas</h1>
         
@@ -1219,6 +1213,7 @@ body {
                         <div class="info-content">
                             <h3>Telefon</h3>
                             <p><a href="tel:+38269206050">+382 69 206 050</a></p>
+                            <p><a href="tel:+38240242332">+382 40 242 332</a></p>
                         </div>
                     </div>
                     <div class="contact-info-item">
@@ -1233,28 +1228,12 @@ body {
                 <div class="working-hours">
                     <h3>Radno vrijeme</h3>
                     <div class="hours-list">
-                        <div class="hour-item today">
-                            <span>Ponedjeljak:</span>
-                            <span>09:00 - 21:00</span>
+                        <div class="hour-item">
+                            <span>Zimsko:</span>
+                            <span>09:00 - 20:00</span>
                         </div>
                         <div class="hour-item">
-                            <span>Utorak:</span>
-                            <span>09:00 - 21:00</span>
-                        </div>
-                        <div class="hour-item">
-                            <span>Srijeda:</span>
-                            <span>09:00 - 21:00</span>
-                        </div>
-                        <div class="hour-item">
-                            <span>Četvrtak:</span>
-                            <span>09:00 - 21:00</span>
-                        </div>
-                        <div class="hour-item">
-                            <span>Petak:</span>
-                            <span>09:00 - 21:00</span>
-                        </div>
-                        <div class="hour-item">
-                            <span>Subota:</span>
+                            <span>Ljetnje:</span>
                             <span>09:00 - 21:00</span>
                         </div>
                         <div class="hour-item">
@@ -1291,7 +1270,7 @@ body {
                     <textarea id="message" name="message" placeholder="Unesite vašu poruku..." required></textarea>
                 </div>
                 <div class="form-group" style="grid-column: 1 / -1;">
-                    <button type="submit" class="submit-btn">POŠALJI PORUKU</button>
+                    <button type="submit" class="submit-btn">POŠALJI</button>
                 </div>
             </form>
         </div>
