--- a/korpa.html
+++ b/korpa.html
@@ -750,6 +750,10 @@
         .checkout-btn:hover {
             background-color: #0a3b77;
         }
+        .checkout-btn a{
+            text-decoration: none;;
+            color: white;
+        }
 
         .cart-actions {
             display: flex;
