--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@ body {
 
 /* Footer */
 .footer {
-    background-color: #124e9a#fff;
+    background-color: #124e9a;
     color: #fff;
     padding: 40px 0 20px;
     margin-top: 50px;
@@ -1332,7 +1332,7 @@ font-size: 14px !important;
 <div class="main-header">
     <div class="header-container">
         <!-- Desktop prikaz -->
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
             <img src="logo.png" alt="TEHNOMAX" style="max-width: 180px;" class="desktop">
         </a>
         <div class="search-bar">
@@ -1357,7 +1357,7 @@ font-size: 14px !important;
                 <span class="hamburger-icon"></span>
             </button>
             
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
                 <img src="logo.png" alt="TEHNOMAX" style="max-width: 120px;">
             </a>
             
@@ -1385,8 +1385,7 @@ font-size: 14px !important;
     <a href="index.html"><i class="fas fa-home"></i> POČETNA</a>
     <a href="#"><i class="fas fa-store"></i> PRODAVNICE</a>
     <a href="kontakt.html"><i class="fas fa-envelope"></i> KONTAKT</a>
-    <a href="#"><i class="fas fa-headset"></i> PODRŠKA</a>
-    <a href="#"><i class="fas fa-newspaper"></i> NOVOSTI</a>
+    <a href="servisi.html"><i class="fas fa-headset"></i> SERVISI</a>
 </div>
 <div class="mobile-overlay" id="mobileOverlay"></div>
 <!-- Dodajte ovaj HTML kod odmah nakon vašeg glavnog menija (nav-menu) -->
@@ -1398,8 +1397,7 @@ font-size: 14px !important;
             <a href="index.html">POČETNA</a>
             <a href="#">PRODAVNICE</a>
             <a href="kontakt.html">KONTAKT</a>
-            <a href="#">PODRŠKA</a>
-            <a href="#">NOVOSTI</a>
+            <a href="servisi.html">SERVISI</a>
         </div>
     </div>
 
