--- a/servisi.html
+++ b/servisi.html
@@ -1243,7 +1243,7 @@
             <div class="service-card">
                 <div class="service-image" style="background-image: url('pin.jpg');"></div>
                 <div class="service-info">
-                    <div class="service-name">PIN MONTENEGRO</div>
+                    <div class="service-name">ALSO MONTENEGRO</div>
                     <div class="service-address">
                         <i class="fas fa-map-marker-alt"></i>
                         <span>Vranići bb, Podgorica</span>
