--- a/servisi.html
+++ b/servisi.html
@@ -1027,7 +1027,7 @@
     </div>
 
     <!-- Services Content -->
-    <h1 class="page-title">Naši Servisi</h1>
+    <h1 class="page-title">Ovlašćeni Servisi</h1>
     
     <div class="services-container">
         <div class="services-grid">
