--- a/korpa.html
+++ b/korpa.html
@@ -1075,7 +1075,7 @@
             <i class="fas fa-shopping-cart"></i>
             <h2>Vaša korpa je prazna</h2>
             <p>Izgleda da još niste dodali proizvode u korpu. Istražite naš katalog da pronađete ono što vam treba.</p>
-            <a href="/" class="continue-shopping">Nastavite kupovinu</a>
+            <a href="kupovina.html" class="continue-shopping">Nastavite kupovinu</a>
         </div>
         
         <!-- Prikaz kada korpa ima proizvode - optimizovano za mobilne uređaje -->
