--- a/prijava.html
+++ b/prijava.html
@@ -1064,12 +1064,12 @@ body {
                 <input type="password" id="password" name="password" required>
             </div>
             <div class="forgot-password">
-                <a href="/zaboravljenalozinka">Zaboravili ste lozinku?</a>
+                <a href="email.html">Zaboravili ste lozinku?</a>
             </div>
             <button type="submit" class="login-btn">PRIJAVITE SE</button>
         </form>
         <div class="register-link">
-            Nemate nalog? <a href="/registracija">Kreirajte</a>
+            Nemate nalog? <a href="registracija.html">Kreirajte</a>
         </div>
     </div></div>
 
