--- a/korpa.html
+++ b/korpa.html
@@ -1187,10 +1187,10 @@
                         <span>Ukupno</span>
                         <span>1.898,98 €</span>
                     </div>
-                    
+                    <a href="kupovina.html" style="text-decoration: none; color: white;">
                     <button class="checkout-btn">
-                        <a href="kupovina.html" style="text-decoration: none; color: white;">Nastavite na plaćanje <i class="fas fa-arrow-right"></i></a>
-                    </button>
+                        Nastavite na plaćanje <i class="fas fa-arrow-right"></i>
+                    </button></a>
                 </div>
             </div>
         </div>
